--- a/manga.ipynb
+++ b/manga.ipynb
@@ -1147,10 +1147,44 @@
    "metadata": {}
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "It seems that the `Unknown` source animes have a lot of `NaN` value in their attributes. But notice that all five animes above finished airing. Maybe most of `Unknown` source animes are finished?"
+   ],
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
+   "source": [
+    "anime[anime['source'] == 'Unknown']['airing'].value_counts()"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "False    3988\n",
+       "True       18\n",
+       "Name: airing, dtype: int64"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 23
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Yeah, that is right. We also notice that, the aired date of these animes are quite old. Maybe"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
    "source": [],
-   "outputs": [],
    "metadata": {}
   }
  ],
