Manipulate the airing time

--- a/anime-analyze.ipynb
+++ b/anime-analyze.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 137,
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 138,
    "source": [
     "anime = pd.read_csv(\"./Data/AnimeList.csv\")\n",
     "anime.head()"
@@ -266,14 +266,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 79
+     "execution_count": 138
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 139,
    "source": [
     "anime.info()"
    ],
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 140,
    "source": [
     "anime.columns"
    ],
@@ -346,7 +346,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 81
+     "execution_count": 140
     }
    ],
    "metadata": {}
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 141,
    "source": [
     "anime = anime.drop(columns=['title_english', 'title_japanese','title_synonyms','image_url'])\n",
     "anime.columns"
@@ -403,7 +403,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 82
+     "execution_count": 141
     }
    ],
    "metadata": {}
@@ -417,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 142,
    "source": [
     "anime.type.unique()"
    ],
@@ -431,7 +431,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 83
+     "execution_count": 142
     }
    ],
    "metadata": {}
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 143,
    "source": [
     "print(anime.type.isnull().any())\n",
     "print(anime.type.isna().any())\n",
@@ -686,7 +686,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 84
+     "execution_count": 143
     }
    ],
    "metadata": {}
@@ -702,7 +702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 144,
    "source": [
     "anime[anime['type'] == 'Music'].shape"
    ],
@@ -715,7 +715,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 85
+     "execution_count": 144
     }
    ],
    "metadata": {}
@@ -729,7 +729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 145,
    "source": [
     "anime = anime[anime['type'] != 'Music']\n",
     "anime.shape"
@@ -743,14 +743,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 86
+     "execution_count": 145
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 146,
    "source": [
     "print(\"We check the columns of the dataset:\")\n",
     "anime.columns"
@@ -776,7 +776,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 87
+     "execution_count": 146
     }
    ],
    "metadata": {}
@@ -790,7 +790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 147,
    "source": [
     "anime['source'].unique()"
    ],
@@ -806,7 +806,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 88
+     "execution_count": 147
     }
    ],
    "metadata": {}
@@ -820,7 +820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 148,
    "source": [
     "anime[anime['type'] == 'Unknown']['source'].value_counts()"
    ],
@@ -841,7 +841,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 89
+     "execution_count": 148
     }
    ],
    "metadata": {}
@@ -857,7 +857,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 149,
    "source": [
     "anime[anime['source'] == 'Unknown'].shape"
    ],
@@ -870,7 +870,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 90
+     "execution_count": 149
     }
    ],
    "metadata": {}
@@ -884,7 +884,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 150,
    "source": [
     "anime[anime['source'] == 'Unknown'].head()"
    ],
@@ -1128,7 +1128,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 91
+     "execution_count": 150
     }
    ],
    "metadata": {}
@@ -1142,7 +1142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 151,
    "source": [
     "anime[anime['source'] == 'Unknown']['airing'].value_counts()"
    ],
@@ -1157,7 +1157,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 92
+     "execution_count": 151
     }
    ],
    "metadata": {}
@@ -1179,7 +1179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 152,
    "source": [
     "print(anime['aired'].iloc[0])\n",
     "type(anime['aired'].iloc[0])"
@@ -1200,7 +1200,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 93
+     "execution_count": 152
     }
    ],
    "metadata": {}
@@ -1221,7 +1221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 153,
    "source": [
     "anime['aired'].isna().any()"
    ],
@@ -1234,7 +1234,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 94
+     "execution_count": 153
     }
    ],
    "metadata": {}
@@ -1255,7 +1255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 154,
    "source": [
     "#Using built-in function ast.literal_eval to convert a string dict to a dict\n",
     "import ast\n",
@@ -1272,7 +1272,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 95
+     "execution_count": 154
     }
    ],
    "metadata": {}
@@ -1286,45 +1286,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 155,
    "source": [
-    "def extract_start(anime):\n",
-    "    return anime['from']\n",
+    "# def extract_start(anime):\n",
+    "#     return anime['from']\n",
     "\n",
-    "def extract_end(anime):\n",
-    "    return anime['to']\n",
+    "# def extract_end(anime):\n",
+    "#     return anime['to']\n",
     "\n",
-    "start = pd.Series(np.vectorize(extract_start)(anime['aired']))\n",
-    "end = pd.Series(np.vectorize(extract_end)(anime['aired']))\n",
+    "# start = pd.Series(np.vectorize(extract_start)(anime['aired']))\n",
+    "# end = pd.Series(np.vectorize(extract_end)(anime['aired']))\n",
     "\n",
+    "\n",
+    "start = anime['aired'].apply(lambda anime: anime['from'])\n",
+    "end = anime['aired'].apply(lambda anime: anime['to'])\n",
+    "\n",
+    "start.name = 'start'\n",
+    "end.name = 'end'\n",
     "anime = pd.concat([anime, start, end], axis = 1)\n",
-    "anime.columns"
+    "start"
    ],
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "Index([     'anime_id',         'title',          'type',        'source',\n",
-       "            'episodes',        'status',        'airing',  'aired_string',\n",
-       "               'aired',      'duration',        'rating',         'score',\n",
-       "           'scored_by',          'rank',    'popularity',       'members',\n",
-       "           'favorites',    'background',     'premiered',     'broadcast',\n",
-       "             'related',      'producer',      'licensor',        'studio',\n",
-       "               'genre', 'opening_theme',  'ending_theme',               0,\n",
-       "                     1],\n",
-       "      dtype='object')"
+       "0        2012-01-13\n",
+       "1        2007-04-02\n",
+       "2        2008-10-04\n",
+       "3        2002-08-16\n",
+       "4        2012-10-06\n",
+       "            ...    \n",
+       "14473    1987-11-05\n",
+       "14474    1986-03-21\n",
+       "14475          None\n",
+       "14476          None\n",
+       "14477    2010-04-07\n",
+       "Name: start, Length: 13629, dtype: object"
       ]
      },
      "metadata": {},
-     "execution_count": 96
+     "execution_count": 155
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 156,
    "source": [
     "anime = anime.rename(columns={0: 'start', 1: 'end'})\n",
     "anime.columns"
@@ -1343,7 +1352,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 101
+     "execution_count": 156
     }
    ],
    "metadata": {}
@@ -1356,8 +1365,20 @@
    "metadata": {}
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 157,
+   "source": [
+    "anime['start'] = pd.to_datetime(anime[anime['start'] != 'None']['start'])\n",
+    "anime['end'] = pd.to_datetime(anime[anime['end'] != 'None']['end'])"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "source": [],
+   "outputs": [],
    "metadata": {}
   },
   {
@@ -1389,10 +1410,10 @@
   },
   "kernelspec": {
    "name": "python3",
-   "display_name": "Python 3.8.11 64-bit"
+   "display_name": "Python 3.8.11 64-bit ('base': conda)"
   },
   "interpreter": {
-   "hash": "03988a1ca043f8de028458af3ae7880dfad49af43b42a438805c5fa18f8ac071"
+   "hash": "deb2b48d990282ea88a32eddb005831931dc55a942ba4a2cbc665175a2d28950"
   }
  },
  "nbformat": 4,
