Add the highscore analysis

--- a/anime-analyze.ipynb
+++ b/anime-analyze.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +262,7 @@
        "[5 rows x 31 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -343,7 +343,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -385,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -399,7 +399,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -418,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -428,7 +428,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -454,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -681,7 +681,7 @@
        "[5 rows x 27 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -703,7 +703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -712,7 +712,7 @@
        "(849, 27)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -730,7 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -739,7 +739,7 @@
        "(13629, 27)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -751,7 +751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -772,7 +772,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -791,7 +791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -803,7 +803,7 @@
        "       'Digital manga'], dtype=object)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -821,7 +821,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -838,7 +838,7 @@
        "Name: source, dtype: int64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -858,7 +858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -867,7 +867,7 @@
        "(4006, 27)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -885,7 +885,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1125,7 +1125,7 @@
        "[5 rows x 27 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1143,7 +1143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1154,7 +1154,7 @@
        "Name: airing, dtype: int64"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1180,7 +1180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1196,7 +1196,7 @@
        "str"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1222,7 +1222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1231,7 +1231,7 @@
        "False"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1256,7 +1256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1265,7 +1265,7 @@
        "dict"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1287,7 +1287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1307,7 +1307,7 @@
        "Name: start, Length: 13629, dtype: object"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1334,7 +1334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1348,7 +1348,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1367,7 +1367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1384,7 +1384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1393,26 +1393,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1998.3289669544508\n",
-      "12.486102954042744\n"
+      "Mean starting year: 1998.3289669544508\n",
+      "Std starting year: 12.486102954042744\n",
+      "Mean end year: 1998.6612661266126\n",
+      "Std end year: 12.462531713731705\n"
      ]
     }
    ],
    "source": [
-    "print(anime[anime['source'] == 'Unknown']['start'].dt.year.mean())\n",
-    "print(anime[anime['source'] == 'Unknown']['start'].dt.year.std())"
+    "print(\"Mean starting year:\",anime[anime['source'] == 'Unknown']['start'].dt.year.mean())\n",
+    "print(\"Std starting year:\",anime[anime['source'] == 'Unknown']['start'].dt.year.std())\n",
+    "\n",
+    "print(\"Mean end year:\",anime[anime['source'] == 'Unknown']['end'].dt.year.mean())\n",
+    "print(\"Std end year:\",anime[anime['source'] == 'Unknown']['end'].dt.year.std())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1439,7 +1444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1462,6 +1467,235 @@
     "plt.xticks(bins)\n",
     "plt.title(\"Ending airing year of Unknown source animes\")\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can see that almost `Unknown` animes are from the 2000s. We can check their popularity next."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>anime_id</th>\n",
+       "      <th>episodes</th>\n",
+       "      <th>score</th>\n",
+       "      <th>scored_by</th>\n",
+       "      <th>rank</th>\n",
+       "      <th>popularity</th>\n",
+       "      <th>members</th>\n",
+       "      <th>favorites</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>4006.000000</td>\n",
+       "      <td>4006.000000</td>\n",
+       "      <td>4006.000000</td>\n",
+       "      <td>4006.000000</td>\n",
+       "      <td>3720.000000</td>\n",
+       "      <td>4006.000000</td>\n",
+       "      <td>4006.000000</td>\n",
+       "      <td>4006.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>14495.867199</td>\n",
+       "      <td>12.346980</td>\n",
+       "      <td>5.990734</td>\n",
+       "      <td>869.914378</td>\n",
+       "      <td>8061.502419</td>\n",
+       "      <td>9463.872192</td>\n",
+       "      <td>2003.205941</td>\n",
+       "      <td>3.875187</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>10396.302970</td>\n",
+       "      <td>56.798427</td>\n",
+       "      <td>0.943986</td>\n",
+       "      <td>2621.771605</td>\n",
+       "      <td>3182.565618</td>\n",
+       "      <td>2998.377082</td>\n",
+       "      <td>5051.930021</td>\n",
+       "      <td>14.503360</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>88.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>4823.250000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>5.460000</td>\n",
+       "      <td>23.000000</td>\n",
+       "      <td>5714.750000</td>\n",
+       "      <td>7382.500000</td>\n",
+       "      <td>149.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>11744.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>6.080000</td>\n",
+       "      <td>97.000000</td>\n",
+       "      <td>8395.500000</td>\n",
+       "      <td>9920.500000</td>\n",
+       "      <td>402.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>23708.500000</td>\n",
+       "      <td>6.000000</td>\n",
+       "      <td>6.590000</td>\n",
+       "      <td>558.000000</td>\n",
+       "      <td>10778.000000</td>\n",
+       "      <td>11967.000000</td>\n",
+       "      <td>1544.750000</td>\n",
+       "      <td>2.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>37908.000000</td>\n",
+       "      <td>1565.000000</td>\n",
+       "      <td>9.200000</td>\n",
+       "      <td>42089.000000</td>\n",
+       "      <td>12919.000000</td>\n",
+       "      <td>14486.000000</td>\n",
+       "      <td>70492.000000</td>\n",
+       "      <td>282.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           anime_id     episodes        score     scored_by          rank  \\\n",
+       "count   4006.000000  4006.000000  4006.000000   4006.000000   3720.000000   \n",
+       "mean   14495.867199    12.346980     5.990734    869.914378   8061.502419   \n",
+       "std    10396.302970    56.798427     0.943986   2621.771605   3182.565618   \n",
+       "min       88.000000     0.000000     0.000000      0.000000      0.000000   \n",
+       "25%     4823.250000     1.000000     5.460000     23.000000   5714.750000   \n",
+       "50%    11744.000000     1.000000     6.080000     97.000000   8395.500000   \n",
+       "75%    23708.500000     6.000000     6.590000    558.000000  10778.000000   \n",
+       "max    37908.000000  1565.000000     9.200000  42089.000000  12919.000000   \n",
+       "\n",
+       "         popularity       members    favorites  \n",
+       "count   4006.000000   4006.000000  4006.000000  \n",
+       "mean    9463.872192   2003.205941     3.875187  \n",
+       "std     2998.377082   5051.930021    14.503360  \n",
+       "min        0.000000      0.000000     0.000000  \n",
+       "25%     7382.500000    149.000000     0.000000  \n",
+       "50%     9920.500000    402.000000     0.000000  \n",
+       "75%    11967.000000   1544.750000     2.000000  \n",
+       "max    14486.000000  70492.000000   282.000000  "
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "anime[anime['source'] == 'Unknown'].describe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There is a strange detail in this table. Not the 0s at the `min` row of the columns `episodes`, `scored_by`, `rank`, `popularity`, `members`, `favorites` (we will filter these 0s later), but there is an anime with a very high `score`: 9.2. We will investigate this anime."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "anime_id                     26145\n",
+       "title            Okaachan Gomen ne\n",
+       "type                         Movie\n",
+       "source                     Unknown\n",
+       "episodes                         1\n",
+       "status             Finished Airing\n",
+       "airing                       False\n",
+       "aired_string                  1985\n",
+       "duration                   26 min.\n",
+       "rating                G - All Ages\n",
+       "score                          9.2\n",
+       "scored_by                        5\n",
+       "rank                       11595.0\n",
+       "popularity                   13561\n",
+       "members                         73\n",
+       "favorites                        0\n",
+       "background                     NaN\n",
+       "premiered                      NaN\n",
+       "broadcast                      NaN\n",
+       "related                         []\n",
+       "producer                       NaN\n",
+       "licensor                       NaN\n",
+       "studio                         NaN\n",
+       "genre             Historical, Kids\n",
+       "opening_theme                   []\n",
+       "ending_theme                    []\n",
+       "start                          NaT\n",
+       "end                            NaT\n",
+       "Name: 3129, dtype: object"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "anime.loc[anime[anime['source'] == 'Unknown']['score'].idxmax()]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Almost all values of the anime are `NaN`. There are only 5 people score this anime. There are approximately 14000 animes in this dataset, but the `ranking` and `popularity` of this anime is very low, around 13500. Additionally, this anime is from 1985, which means it is very old, so that nobody remembers about it. Therefore, this anime is overrated by the users."
    ]
   },
   {
