Change [] value of themes

--- a/anime-analyze.ipynb
+++ b/anime-analyze.ipynb
@@ -1386,7 +1386,7 @@
    "cell_type": "code",
    "execution_count": 22,
    "source": [
-    "anime = anime.drop(columns='aired')\n"
+    "anime = anime.drop(columns=['aired','aired_string'])\n"
    ],
    "outputs": [],
    "metadata": {}
@@ -1661,7 +1661,6 @@
        "episodes                         1\n",
        "status             Finished Airing\n",
        "airing                       False\n",
-       "aired_string                  1985\n",
        "duration                   26 min.\n",
        "rating                G - All Ages\n",
        "score                          9.2\n",
@@ -1723,7 +1722,6 @@
        "episodes                                 1565\n",
        "status                        Finished Airing\n",
        "airing                                  False\n",
-       "aired_string      Jan 1, 1975 to Dec 31, 1979\n",
        "duration                       5 min. per ep.\n",
        "rating                          PG - Children\n",
        "score                                    5.98\n",
@@ -1756,13 +1754,13 @@
   {
    "cell_type": "markdown",
    "source": [
-    "A five year anime with 1565 episodes! About 1 episode per day."
+    "A five year anime with 1565 episodes! About 1 episode per day. But the popularity and its rank is quite low."
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 29,
    "source": [
     "tmp_anime = anime.loc[anime[anime['source'] == 'Unknown']['episodes'].idxmax()]\n",
     "\n",
@@ -1790,7 +1788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 30,
    "source": [
     "anime[anime['source'] == 'Unknown']['genre'].apply(lambda anime: True if 'Kids' in str(anime) else False).value_counts()"
    ],
@@ -1805,14 +1803,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 42
+     "execution_count": 30
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 31,
    "source": [
     "print(\"Percentage of Kids animes:\", 918 / (3018 + 918))"
    ],
@@ -1843,7 +1841,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 32,
    "source": [
     "anime[anime['source'] == 'Unknown'].isna().sum(axis=1).describe()"
    ],
@@ -1864,9 +1862,72 @@
       ]
      },
      "metadata": {},
-     "execution_count": 45
+     "execution_count": 32
     }
    ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "source": [
+    "anime.loc[anime[anime['source'] == 'Unknown'].isna().sum(axis=1).idxmax()]"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "anime_id                                                  30055\n",
+       "title            Mabeob Chunjamun: Daemawangui Buhwaleul Magala\n",
+       "type                                                      Movie\n",
+       "source                                                  Unknown\n",
+       "episodes                                                      1\n",
+       "status                                          Finished Airing\n",
+       "airing                                                    False\n",
+       "duration                                          1 hr. 25 min.\n",
+       "rating                                             G - All Ages\n",
+       "score                                                      4.38\n",
+       "scored_by                                                     8\n",
+       "rank                                                    11106.0\n",
+       "popularity                                                13687\n",
+       "members                                                      67\n",
+       "favorites                                                     0\n",
+       "background                                                  NaN\n",
+       "premiered                                                   NaN\n",
+       "broadcast                                                   NaN\n",
+       "related                                                      []\n",
+       "producer                                                    NaN\n",
+       "licensor                                                    NaN\n",
+       "studio                                                      NaN\n",
+       "genre                                                       NaN\n",
+       "opening_theme                                                []\n",
+       "ending_theme                                                 []\n",
+       "start                                                       NaT\n",
+       "end                                                         NaT\n",
+       "Name: 1165, dtype: object"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 34
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "We can also consider the brackets `[]` value of `opening_theme` and `ending_theme` a null value. We can try to change that as well."
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "source": [
+    "anime[['opening_theme', 'ending_theme']] = anime[['opening_theme', 'ending_theme']].replace('[]', np.NaN)"
+   ],
+   "outputs": [],
    "metadata": {}
   },
   {
