--- a/anime-analyze.ipynb
+++ b/anime-analyze.ipynb
@@ -1931,6 +1931,100 @@
    "metadata": {}
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "Then run the `describe()` method again on our data."
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "source": [
+    "anime[anime['source'] == 'Unknown'].isna().sum(axis=1).describe()"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "count    4006.000000\n",
+       "mean        6.589616\n",
+       "std         2.073513\n",
+       "min         0.000000\n",
+       "25%         5.000000\n",
+       "50%         7.000000\n",
+       "75%         8.000000\n",
+       "max        11.000000\n",
+       "dtype: float64"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 39
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "We can also drop all the `Unknown` animes whether their number of `NaN` values is greater than the mean `NaN` values. But let check the whole database first."
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "source": [
+    "anime.isna().sum(axis=1).describe()"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "count    13629.000000\n",
+       "mean         5.485069\n",
+       "std          2.733198\n",
+       "min          0.000000\n",
+       "25%          3.000000\n",
+       "50%          6.000000\n",
+       "75%          8.000000\n",
+       "max         11.000000\n",
+       "dtype: float64"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 40
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "We can see that the average `NaN` columns of `Unknown` is higher than the dataset. Then, we should drop all the `Unknown` animes where its number of `NaN` values is higher the mean."
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "source": [
+    "tmp_anime = anime[anime['source'] == 'Unknown'].isna().sum(axis=1)\n",
+    "# anime[tmp_anime > tmp_anime.mean()]\n"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "source": [],
